# qrgen

./: README.md  pyproject.toml
src/qrgen/: constants.py  main.py
src/qrgen/gui/: color_picker.py  constants.py  custom_buttons.py  custom_widgets.py  drop_target.py  helpers.py  main_widget.py  module_card.py
src/qrgen/qr_code/: qr_generator.py
